fix: hide unsafe configs
* hide Animation in Opera
* hide Auto hide scrollbar in iOS

--- a/assets/app.css
+++ b/assets/app.css
@@ -523,6 +523,10 @@ footer {
   display: flex;
 }
 
+#system .note li.hide {
+  display: none;
+}
+
 #system .note li .description {
   font-size: 18px;
   overflow: hidden;
